<resources>
    <string name="app_name">uWorkers</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contrasena</string>
    <string name="login">Iniciar sesion</string>
    <string name="title_activity_principal">principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ico_signup">Nueva cuenta:</string>
    <string name="signup">Signup</string>
    <string name="ico_alumno">{gmd_person} Alumno</string>
    <string name="ico_empresa">{gmd_business} Empresa</string>

    <string name="bvacantes">{gmd_search} Buscar vacantes</string>
    <string name="perfil">{gmd_person_outline} Perfil</string>
    <string name="logout">{cmd_logout} Cerrar sesion</string>
    <string name="config">Configuraciones</string>
    <string name="add_vacantes">{gmd_add_box} Agregar vacante</string>

    <string name="balumnos">{cmd_account_search} Buscar alumnos</string>
    <string name="vacantes">{cmd_newspaper} Vacantes</string>
    <string name="title_activity_principal_alumnos">principal_alumnos</string>
    <string name="title_activity_principal_empresa">principal_empresa</string>
    <string name="title_activity_principal_instituto">principal_instituto</string>

    <string name="bempresas">{gmd_business} Buscar empresa</string>

    <!--TODO: iconos perfil-->
    <string name="ico_nocontrol">{gmd_credit_card} No. Control:</string>
    <string name="ico_pro">{cmd_professional_hexagon} Carrera:</string>
    <string name="ico_email">{gmd_email} Email:</string>
    <string name="ico_flag">{gmd_flag} Objetivos:</string>
    <string name="ico_conocimientos">{gmd_star} Conocimientos:</string>
    <string name="ico_experiencia">{gmd_work} Experiencia laboral:</string>
    <string name="ico_curriculum">{gmd_insert_drive_file} Curriculum:</string>
    <string name="ico_adj">{gmd_attach_file} Adjuntar archivo...</string>

    <string name="ico_descripcion">{gmd_description} Descripcion:</string>
    <string name="ico_giro">{gmd_group_work} Giro:</string>
    <string name="ico_nombre_empresa">{gmd_business} Nombre empresa:</string>


    <string name="ico_nombre_alumno">{gmd_account_circle} Nombre completo:</string>
    <string name="ico_campus">{gmd_account_balance} Campus:</string>
    <string name="ico_phone">{gmd_local_phone} Telefono:</string>
    <string name="ico_guardar">Guardar</string>


    <string name="ico_contrasena">{gmd_lock_outline} Contrasena:</string>
    <string name="ico_contrasena_conf">{gmd_lock} Confirmar contrasena:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Iconos para vacante -->
    <string name="ico_titulo_vacante">{gmd_title} Titulo de la vacante:</string>
    <string name="ico_nombre_instituto">{gmd_account_balance} Nombre del instituto:</string>
    <string name="obligatorio">Obligatorio...</string>

    <string name="ico_sueldo">{gmd_attach_money} Sueldo:</string>
    <string name="ico_horario">{gmd_access_time} Horario:</string>
    <string name="matutino">Matutino</string>
    <string name="vespertino">Vespertino</string>
    <string name="nocturno">Nocturno</string>
    <string name="ico_turno">{gmd_timelapse} Turno:</string>
    <string name="medio_tiempo">Medio tiempo</string>
    <string name="tiempo_completo">Tiempo completo</string>
    <string name="ico_fecha">{gmd_date_range} Fecha de publicacion:</string>
    <string name="ver_vacantes_empresa">{gmd_list} Ver vacantes de esta empresa</string>
    <string name="ver_perfil_empresa">{gmd_view_compact} Ver perfil de empresa</string>
    <string name="modificar_vacante">Modificar vacante</string>
    <string name="eliminar_vacante">Eliminar vacante</string>

</resources>
