<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xr45labs.uworkers.fragments.alumnos.fr_alumno_vacante">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_ico_nombre_vacante"
        android:text="@string/ico_titulo_vacante"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_nombre_vacante"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_nombre_vacante"/>

    <TextView
        android:id="@+id/tv_ico_descripcion_vacante"
        android:text="@string/ico_descripcion"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nombre_vacante"/>

    <TextView
        android:id="@+id/tv_descripcion_vacante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_descripcion_vacante"/>

    <TextView
        android:id="@+id/tv_ico_horario"
        android:text="@string/ico_horario"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_descripcion_vacante"/>

    <TextView
        android:id="@+id/tv_horario"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_horario"/>


    <TextView
        android:id="@+id/tv_ico_turno"
        android:text="@string/ico_turno"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_horario"/>

    <TextView
        android:id="@+id/tv_turno"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_turno"/>

    <TextView
        android:id="@+id/tv_ico_sueldo"
        android:text="@string/ico_sueldo"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_turno"/>

    <TextView
        android:id="@+id/tv_sueldo"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_sueldo"/>

    <TextView
        android:id="@+id/tv_ico_fecha_publicacion"
        android:text="@string/ico_fecha"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sueldo"/>

    <TextView
        android:id="@+id/tv_fecha_publicacion"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ico_fecha_publicacion"/>

    <Button
        android:id="@+id/btn_perfil"
        android:text=""
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fecha_publicacion"/>

</RelativeLayout>
