<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xr45labs.uworkers.fragments.empresas.fr_registro_empresa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ico_nombre_empresa"
                android:text="@string/ico_nombre_empresa"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_nombre_empresa"
                android:inputType="text"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_nombre_empresa"/>

            <TextView
                android:id="@+id/tv_ico_giro"
                android:text="@string/ico_giro"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_nombre_empresa"/>

            <EditText
                android:id="@+id/et_giro"
                android:inputType="text"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_giro"/>

            <TextView
                android:id="@+id/tv_ico_email"
                android:text="@string/ico_email"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_giro"/>

            <EditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:maxLength="45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_email"/>

            <TextView
                android:id="@+id/tv_ico_phone"
                android:text="@string/ico_phone"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"/>

            <EditText
                android:id="@+id/et_phone"
                android:inputType="phone"
                android:max="13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_phone"/>

            <TextView
                android:id="@+id/tv_ico_contrasena"
                android:text="@string/ico_contrasena"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_phone"/>

            <EditText
                android:id="@+id/et_contrasena"
                android:inputType="textPassword"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_contrasena"/>

            <TextView
                android:id="@+id/tv_ico_contrasena_confir"
                android:text="@string/ico_contrasena_conf"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_contrasena"/>

            <EditText
                android:id="@+id/et_contrasena_confir"
                android:inputType="textPassword"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_contrasena_confir"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_guardar"
                android:text="@string/ico_guardar"
                android:textColor="@color/colorAccent"
                android:background="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_contrasena_confir"/>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
