<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xr45labs.uworkers.fragments.fr_perfil_alumno_externo">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/perfil_header"
                android:id="@+id/perfil_header"/>

            <TextView
                android:id="@+id/tv_ico_pro"
                android:text="@string/ico_pro"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/perfil_header" />

            <TextView
                android:id="@+id/tv_carrera"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_pro" />

            <TextView
                android:id="@+id/tv_ico_email"
                android:text="@string/ico_email"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_carrera"/>

            <TextView
                android:id="@+id/tv_email"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_email"/>

            <TextView
                android:id="@+id/tv_ico_objetivos"
                android:text="@string/ico_flag"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email"/>

            <TextView
                android:id="@+id/tv_objetivos"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_objetivos" />

            <TextView
                android:id="@+id/tv_ico_conocimientos"
                android:text="@string/ico_conocimientos"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_objetivos"/>

            <TextView
                android:id="@+id/tv_conocimientos"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_conocimientos"/>

            <TextView
                android:id="@+id/tv_ico_experiencia"
                android:text="@string/ico_experiencia"
                android:textColor="@color/color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_conocimientos"/>

            <TextView
                android:id="@+id/tv_experiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_experiencia"/>

            <Button
                android:id="@+id/btn_perfil_a_conf"
                android:text="@string/config"
                android:textColor="@color/colorAccent"
                android:background="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_experiencia"/>
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
