<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.xr45labs.uworkers.MainActivity">

    <ImageView
        android:id="@+id/Iv_login"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/Et_usuario"
        android:adjustViewBounds="false" />

    <EditText
        android:id="@+id/Et_usuario"
        android:textColor="@color/colorAccent"
        android:hint="@string/Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/Et_contrasena"
        android:textColor="@color/colorAccent"
        android:hint="@string/Contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Et_usuario" />

    <Button
        android:id="@+id/Btn_login"
        android:text="@string/login"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_below="@+id/Et_contrasena"/>
</RelativeLayout>
