<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xr45labs.uworkers.fragments.empresas.fr_perfil_empresa">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/perfil_header"
                android:id="@+id/perfil_header"/>

            <TextView
                android:id="@+id/tv_ico_giro"
                android:text="@string/ico_giro"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/perfil_header"/>

            <TextView
                android:id="@+id/tv_giro"
                android:text=""
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_giro"/>

            <TextView
                android:id="@+id/tv_ico_descripcion"
                android:text="@string/ico_descripcion"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_giro"/>

            <TextView
                android:id="@+id/tv_descripcion"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_descripcion"/>

            <TextView
                android:id="@+id/tv_ico_phone"
                android:text="@string/ico_phone"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_descripcion"/>

            <TextView
                android:id="@+id/tv_phone"
                android:text="33333333"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ico_phone"/>

            <Button
                android:id="@+id/btn_perfil_emp_conf"
                android:text="@string/config"
                android:textColor="@color/colorAccent"
                android:background="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_phone"/>
        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
