<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xr45labs.uworkers.fragments.instituto.fr_perfil_instituto">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/nav_header_principal_instituto"
                android:id="@+id/nav_ins"
                />
            <TextView
                android:id="@+id/tv_ico_campus"
                android:text="@string/ico_campus"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_ins"/>

            <TextView
                android:id="@+id/tv_campus"
                android:text="Zapopan"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_campus"/>

            <TextView
                android:id="@+id/tv_ico_email"
                android:text="@string/ico_email"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_campus"/>

            <TextView
                android:id="@+id/tv_email"
                android:text="its@itszapopan.edu.mx"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_email"/>

            <TextView
                android:id="@+id/tv_ico_phone"
                android:text="@string/ico_phone"
                android:textColor="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email"/>

            <TextView
                android:id="@+id/tv_phone"
                android:text="33380000"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ico_phone"/>

            <Button
                android:id="@+id/btn_perfil_instituto_config"
                android:text="@string/config"
                android:textColor="@color/colorAccent"
                android:background="@color/color1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_phone"/>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>
